Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/apis/test_addons.html
+++ b/backend/apis/test_addons.html
@@ -55,6 +55,7 @@ el.replaceWith(d);
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.parametrize(&#34;addon&#34;, [
     &#39;cattle-logging-system/rancher-logging&#39;,
     &#39;cattle-monitoring-system/rancher-monitoring&#39;,
