--- a/backend/apis/test_hosts.html
+++ b/backend/apis/test_hosts.html
@@ -53,8 +53,9 @@ el.replaceWith(d);
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.dependency(depends=[&#34;get_host&#34;], name=&#34;delete_host&#34;)
-@pytest.mark.p0
+@pytest.mark.p1
 @pytest.mark.hosts
+@pytest.mark.sanity
 @pytest.mark.delete_host
 def test_delete_host(api_client, wait_timeout):
     &#34;&#34;&#34;
@@ -95,6 +96,7 @@ def test_delete_host(api_client, wait_timeout):
 <pre><code class="python">@pytest.mark.dependency(name=&#34;get_host&#34;)
 @pytest.mark.hosts
 @pytest.mark.p0
+@pytest.mark.smoke
 def test_get_host(api_client):
     # Case 1: Get all nodes
     status_code, nodes_info = api_client.hosts.get()
@@ -122,7 +124,8 @@ def test_get_host(api_client):
 </summary>
 <pre><code class="python">@pytest.mark.dependency(depends=[&#34;get_host&#34;], name=&#34;enable_maintenance_mode&#34;)
 @pytest.mark.hosts
-@pytest.mark.p2
+@pytest.mark.p0
+@pytest.mark.smoke
 def test_maintenance_mode(api_client, wait_timeout):
     &#34;&#34;&#34;
     Test the hosts are the nodes which make the cluster
@@ -187,6 +190,7 @@ hosts-12-Host with no VMs on it</p></div>
 <pre><code class="python">@pytest.mark.dependency(depends=[&#34;get_host&#34;])
 @pytest.mark.hosts
 @pytest.mark.p0
+@pytest.mark.smoke
 def test_update_node(api_client):
     &#34;&#34;&#34;
     Test the hosts are the nodes which make the cluster
@@ -242,6 +246,7 @@ def test_update_node(api_client):
 <pre><code class="python">@pytest.mark.dependency(depends=[&#34;get_host&#34;])
 @pytest.mark.hosts
 @pytest.mark.p2
+@pytest.mark.sanity
 def test_update_using_yaml(api_client):
     &#34;&#34;&#34;
     Test the hosts are the nodes which make the cluster
