--- a/backend/apis/test_networks.html
+++ b/backend/apis/test_networks.html
@@ -55,6 +55,7 @@ el.replaceWith(d);
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.networks
 class TestNetworks:
 
@@ -207,6 +208,7 @@ def test_get(self, api_client, unique_name):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.negative
 @pytest.mark.networks
 class TestNetworksNegative:
