--- a/backend/apis/test_vms.html
+++ b/backend/apis/test_vms.html
@@ -55,6 +55,7 @@ el.replaceWith(d);
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.negative
 @pytest.mark.virtualmachines
 class TestVMNegative:
