--- a/backend/integrations/test_3_vm.html
+++ b/backend/integrations/test_3_vm.html
@@ -195,6 +195,7 @@ def storage_network(api_client, cluster_network, vm_network, setting_checker):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.virtualmachines
 def test_migrate_vm_with_multiple_volumes(
     api_client, unique_name, ubuntu_image, wait_timeout, available_node_names, vm_checker
@@ -268,6 +269,7 @@ def test_migrate_vm_with_multiple_volumes(
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.virtualmachines
 def test_migrate_vm_with_user_data(
     api_client, unique_name, ubuntu_image, wait_timeout, available_node_names, vm_checker
@@ -346,6 +348,7 @@ def test_migrate_vm_with_user_data(
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.virtualmachines
 def test_multiple_migrations(
     api_client, unique_name, ubuntu_image, wait_timeout, available_node_names
@@ -520,7 +523,8 @@ def vm_network(api_client, unique_name, cluster_network, vlan_id, network_checke
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
+<pre><code class="python">@pytest.mark.p1
+@pytest.mark.sanity
 @pytest.mark.networks
 @pytest.mark.settings
 @pytest.mark.virtualmachines
