--- a/backend/integrations/test_3_vm_functions.html
+++ b/backend/integrations/test_3_vm_functions.html
@@ -234,6 +234,7 @@ def stopped_vm(api_client, ssh_keypair, wait_timeout, image, unique_vm_name):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.virtualmachines
 def test_create_stopped_vm(api_client, stopped_vm, wait_timeout):
     &#34;&#34;&#34;
@@ -289,6 +290,7 @@ Expected Result:<ul>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.virtualmachines
 @pytest.mark.negative
 @pytest.mark.parametrize(&#34;resource&#34;, [dict(cpu=MAX), dict(mem=MAX), dict(disk=MAX),
@@ -455,6 +457,7 @@ an opensuse image.</p>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.virtualmachines
 @pytest.mark.dependency(name=&#34;minimal_vm&#34;)
 def test_minimal_vm(api_client, image, unique_vm_name, wait_timeout):
@@ -512,6 +515,7 @@ Expected Result:<ul>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.virtualmachines
 @pytest.mark.skip_version_if(
     &#34;&gt; v1.3.0&#34;, reason=&#34;`pc type removed, ref: https://github.com/harvester/harvester/issues/5437&#34;
@@ -714,6 +718,7 @@ an opensuse image.</p>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.negative
 @pytest.mark.virtualmachines
 def test_vm_with_bogus_vlan(api_client, image, unique_vm_name,
@@ -917,6 +922,8 @@ def unset_cpu_memory_overcommit(api_client):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
+@pytest.mark.wait_volumes_detached
 @pytest.mark.virtualmachines
 class TestHotPlugVolume:
     &#34;&#34;&#34;
@@ -1283,6 +1290,7 @@ def test_remove(
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.virtualmachines
 class TestVMClone:
     def test_clone_running_vm(
@@ -1993,6 +2001,7 @@ class TestVMClone:
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.virtualmachines
 @pytest.mark.dependency(depends=[&#34;minimal_vm&#34;])
 class TestVMOperations:
@@ -2912,6 +2921,7 @@ Expected Result:<ul>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.virtualmachines
 class TestVMResource:
     @pytest.mark.parametrize(&#34;res_type&#34;, [&#34;cpu&#34;, &#34;memory&#34;])
@@ -3583,6 +3593,8 @@ def test_update_schedule_on_maximum(
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
+@pytest.mark.volumes
 @pytest.mark.virtualmachines
 class TestVMWithVolumes:
     def test_create_with_two_volumes(
