--- a/backend/integrations/test_4_vm_host_powercycle.html
+++ b/backend/integrations/test_4_vm_host_powercycle.html
@@ -166,7 +166,9 @@ def focal_vm(api_client, focal_image, wait_timeout):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.hosts
+@pytest.mark.virtualmachines
 @pytest.mark.dependency(depends=[&#34;host_poweroff&#34;, &#34;host_poweron&#34;])
 def test_delete_vm_after_host_shutdown(
     api_client, host_state, wait_timeout, focal_vm, available_node_names
@@ -307,7 +309,9 @@ Exepected Result:<ul>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.hosts
+@pytest.mark.smoke
 @pytest.mark.p0
+@pytest.mark.virtualmachines
 def test_maintenance_mode_trigger_vm_migrate(
     api_client, focal_vm, wait_timeout, available_node_names
 ):
@@ -372,7 +376,9 @@ def test_maintenance_mode_trigger_vm_migrate(
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.hosts
+@pytest.mark.sanity
 @pytest.mark.p0
+@pytest.mark.virtualmachines
 @pytest.mark.dependency(depends=[&#34;host_poweroff&#34;, &#34;host_poweron&#34;])
 def test_poweroff_node_trigger_vm_reschedule(
     api_client, host_state, focal_vm, wait_timeout, available_node_names, vm_force_reset_policy
@@ -486,6 +492,7 @@ Exepected Result:<ul>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.hosts
+@pytest.mark.smoke
 @pytest.mark.p0
 def test_verify_host_info(api_client):
     status_code, nodes_info = api_client.hosts.get()
@@ -524,7 +531,9 @@ def test_verify_host_info(api_client):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.hosts
+@pytest.mark.virtualmachines
 @pytest.mark.dependency(depends=[&#34;host_poweroff&#34;, &#34;host_poweron&#34;])
 def test_vm_restarted_after_host_reboot(
     api_client, host_state, wait_timeout, focal_vm, available_node_names
@@ -665,6 +674,7 @@ def vm_force_reset_policy(api_client):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.hosts
+@pytest.mark.sanity
 @pytest.mark.p1
 class TestHostState:
     @pytest.mark.dependency(name=&#34;host_poweroff&#34;)
