--- a/backend/integrations/test_4_vm_snapshot.html
+++ b/backend/integrations/test_4_vm_snapshot.html
@@ -452,6 +452,7 @@ def vm_snapshot_name():
 <pre><code class="python">@pytest.mark.p0
 @pytest.mark.virtualmachines
 class TestVMSnapshot:
+    @pytest.mark.smoke
     @pytest.mark.dependency(name=&#34;source_vm_snapshot&#34;)
     def test_vm_snapshot_create(self, api_client,
                                 source_vm, vm_snapshot_name,
@@ -494,6 +495,7 @@ class TestVMSnapshot:
         assert 200 == code
         assert data.get(&#34;status&#34;, {}).get(&#34;readyToUse&#34;) is True
 
+    @pytest.mark.negative
     @pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
     def test_volume_snapshot_not_exist(self, api_client):
         &#39;&#39;&#39; ref: https://github.com/harvester/tests/issues/524 &#39;&#39;&#39;
@@ -502,6 +504,7 @@ class TestVMSnapshot:
         assert 200 == code, (code, data)
         assert not data[&#39;data&#39;], (code, data)
 
+    @pytest.mark.smoke
     @pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
     def test_restore_into_new_vm_from_vm_snapshot(self, api_client,
                                                   restored_from_snapshot_vm,
@@ -529,6 +532,7 @@ class TestVMSnapshot:
                     ssh_user, ssh_keypair,
                     actassert, wait_timeout)
 
+    @pytest.mark.negative
     @pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
     def test_replace_is_rejected_when_deletepolicy_is_retain(self, api_client,
                                                              source_vm, vm_snapshot_name,
@@ -557,6 +561,7 @@ class TestVMSnapshot:
         assert wantmsg in reason
         assert 422 == code
 
+    @pytest.mark.smoke
     @pytest.mark.dependency(name=&#34;replaced_source_vm&#34;, depends=[&#34;source_vm_snapshot&#34;])
     def test_replace_vm_with_vm_snapshot(self, api_client,
                                          source_vm, vm_snapshot_name,
@@ -608,6 +613,7 @@ class TestVMSnapshot:
                     ssh_user, ssh_keypair,
                     actassert, wait_timeout)
 
+    @pytest.mark.sanity
     @pytest.mark.dependency(name=&#34;detached_source_vm_pvc&#34;, depends=[&#34;replaced_source_vm&#34;])
     def test_restore_from_vm_snapshot_while_pvc_detached_from_source(self,
                                                                      api_client,
@@ -639,6 +645,7 @@ class TestVMSnapshot:
                     ssh_user, ssh_keypair,
                     actassert, wait_timeout)
 
+    @pytest.mark.sanity
     @pytest.mark.dependency(name=&#34;snapshot_created_from_detached_source_vm_pvc&#34;,
                             depends=[&#34;detached_source_vm_pvc&#34;])
     def test_create_vm_snapshot_while_pvc_detached(self, api_client,
@@ -673,6 +680,7 @@ class TestVMSnapshot:
         assert 200 == code
         assert data.get(&#34;status&#34;, {}).get(&#34;readyToUse&#34;) is True
 
+    @pytest.mark.sanity
     @pytest.mark.dependency(name=&#34;cleaned_up_after_vm_delete&#34;)
     def test_vm_snapshots_are_cleaned_up_after_source_vm_deleted(self, api_client,
                                                                  source_vm, vm_snapshot_name,
@@ -710,6 +718,7 @@ class TestVMSnapshot:
 
         wait_for_snapshot_to_disappear(vm_snapshot_name)
 
+    @pytest.mark.sanity
     @pytest.mark.dependency(depends=[&#34;snapshot_created_from_detached_source_vm_pvc&#34;,
                                      &#34;cleaned_up_after_vm_delete&#34;])
     def test_volume_snapshots_are_cleaned_up_after_source_volume_deleted(self, api_client,
@@ -781,7 +790,8 @@ class TestVMSnapshot:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;snapshot_created_from_detached_source_vm_pvc&#34;,
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.dependency(name=&#34;snapshot_created_from_detached_source_vm_pvc&#34;,
                         depends=[&#34;detached_source_vm_pvc&#34;])
 def test_create_vm_snapshot_while_pvc_detached(self, api_client,
                                                vm_snapshot_2_name, source_vm, wait_timeout):
@@ -829,7 +839,8 @@ the PVC is detached.)</p></div>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
+<pre><code class="python">@pytest.mark.negative
+@pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
 def test_replace_is_rejected_when_deletepolicy_is_retain(self, api_client,
                                                          source_vm, vm_snapshot_name,
                                                          wait_timeout):
@@ -867,7 +878,8 @@ def test_replace_is_rejected_when_deletepolicy_is_retain(self, api_client,
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;replaced_source_vm&#34;, depends=[&#34;source_vm_snapshot&#34;])
+<pre><code class="python">@pytest.mark.smoke
+@pytest.mark.dependency(name=&#34;replaced_source_vm&#34;, depends=[&#34;source_vm_snapshot&#34;])
 def test_replace_vm_with_vm_snapshot(self, api_client,
                                      source_vm, vm_snapshot_name,
                                      ssh_keypair, host_shell,
@@ -933,7 +945,8 @@ and its expected contents (<code>123</code>).</p>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;detached_source_vm_pvc&#34;, depends=[&#34;replaced_source_vm&#34;])
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.dependency(name=&#34;detached_source_vm_pvc&#34;, depends=[&#34;replaced_source_vm&#34;])
 def test_restore_from_vm_snapshot_while_pvc_detached_from_source(self,
                                                                  api_client,
                                                                  restored_vm_2,
@@ -980,7 +993,8 @@ the PVC is detached.)</p>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
+<pre><code class="python">@pytest.mark.smoke
+@pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
 def test_restore_into_new_vm_from_vm_snapshot(self, api_client,
                                               restored_from_snapshot_vm,
                                               ssh_keypair, host_shell,
@@ -1023,7 +1037,8 @@ snapshot (<code>vm-snapshot</code>).</p></div>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;source_vm_snapshot&#34;)
+<pre><code class="python">@pytest.mark.smoke
+@pytest.mark.dependency(name=&#34;source_vm_snapshot&#34;)
 def test_vm_snapshot_create(self, api_client,
                             source_vm, vm_snapshot_name,
                             host_shell, vm_shell,
@@ -1077,7 +1092,8 @@ A virtual machine has been created and is running.</p></div>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;cleaned_up_after_vm_delete&#34;)
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.dependency(name=&#34;cleaned_up_after_vm_delete&#34;)
 def test_vm_snapshots_are_cleaned_up_after_source_vm_deleted(self, api_client,
                                                              source_vm, vm_snapshot_name,
                                                              wait_timeout):
@@ -1130,7 +1146,8 @@ and assert that the snapshot has been removed.</p></div>
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
+<pre><code class="python">@pytest.mark.negative
+@pytest.mark.dependency(depends=[&#34;source_vm_snapshot&#34;])
 def test_volume_snapshot_not_exist(self, api_client):
     &#39;&#39;&#39; ref: https://github.com/harvester/tests/issues/524 &#39;&#39;&#39;
     code, data = api_client.vol_snapshots.get()
@@ -1148,7 +1165,8 @@ def test_volume_snapshot_not_exist(self, api_client):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(depends=[&#34;snapshot_created_from_detached_source_vm_pvc&#34;,
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.dependency(depends=[&#34;snapshot_created_from_detached_source_vm_pvc&#34;,
                                  &#34;cleaned_up_after_vm_delete&#34;])
 def test_volume_snapshots_are_cleaned_up_after_source_volume_deleted(self, api_client,
                                                                      source_vm, wait_timeout):
