--- a/backend/integrations/test_5_vm_networks_interact.html
+++ b/backend/integrations/test_5_vm_networks_interact.html
@@ -275,11 +275,10 @@ def vm_network(api_client, unique_name, wait_timeout, cluster_network, vlan_id):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
+@pytest.mark.virtualmachines
 @pytest.mark.networks
 class TestBackendNetwork:
-
-    @pytest.mark.p0
-    @pytest.mark.networks
     def test_mgmt_network_connection(
         self, api_client, request, client, image_opensuse, unique_name, wait_timeout,
         host_shell, vm_shell_from_host, vm_checker
@@ -375,8 +374,6 @@ class TestBackendNetwork:
             vol_name = vol[&#39;volume&#39;][&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;]
             api_client.volumes.delete(vol_name)
 
-    @pytest.mark.p0
-    @pytest.mark.networks
     @pytest.mark.dependency(name=&#34;vlan_network_connection&#34;)
     def test_vlan_network_connection(self, api_client, request, client, unique_name,
                                      image_opensuse, vm_network, wait_timeout, vm_checker):
@@ -459,8 +456,6 @@ class TestBackendNetwork:
             vol_name = vol[&#39;volume&#39;][&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;]
             api_client.volumes.delete(vol_name)
 
-    @pytest.mark.p0
-    @pytest.mark.networks
     @pytest.mark.dependency(name=&#34;reboot_vlan_connection&#34;,
                             depends=[&#34;vlan_network_connection&#34;])
     def test_reboot_vlan_connection(self, api_client, request, unique_name,
@@ -606,8 +601,6 @@ class TestBackendNetwork:
             vol_name = vol[&#39;volume&#39;][&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;]
             api_client.volumes.delete(vol_name)
 
-    @pytest.mark.p0
-    @pytest.mark.networks
     def test_mgmt_to_vlan_connection(self, api_client, request, client, unique_name,
                                      image_opensuse, vm_network, wait_timeout, vm_checker):
         &#34;&#34;&#34;
@@ -738,8 +731,6 @@ class TestBackendNetwork:
             vol_name = vol[&#39;volume&#39;][&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;]
             api_client.volumes.delete(vol_name)
 
-    @pytest.mark.p0
-    @pytest.mark.networks
     def test_vlan_to_mgmt_connection(
         self, api_client, request, client, unique_name, image_opensuse, vm_network, wait_timeout,
         host_shell, vm_shell_from_host, vm_checker
@@ -869,8 +860,6 @@ class TestBackendNetwork:
             vol_name = vol[&#39;volume&#39;][&#39;persistentVolumeClaim&#39;][&#39;claimName&#39;]
             api_client.volumes.delete(vol_name)
 
-    @pytest.mark.p0
-    @pytest.mark.networks
     def test_delete_vlan_from_multiple(
         self, api_client, request, client, unique_name, image_opensuse, vm_network, wait_timeout,
         host_shell, vm_checker
@@ -1113,9 +1102,7 @@ class TestBackendNetwork:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
-@pytest.mark.networks
-def test_delete_vlan_from_multiple(
+<pre><code class="python">def test_delete_vlan_from_multiple(
     self, api_client, request, client, unique_name, image_opensuse, vm_network, wait_timeout,
     host_shell, vm_checker
 ):
@@ -1279,9 +1266,7 @@ def test_delete_vlan_from_multiple(
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
-@pytest.mark.networks
-def test_mgmt_network_connection(
+<pre><code class="python">def test_mgmt_network_connection(
     self, api_client, request, client, image_opensuse, unique_name, wait_timeout,
     host_shell, vm_shell_from_host, vm_checker
 ):
@@ -1394,9 +1379,7 @@ def test_mgmt_network_connection(
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
-@pytest.mark.networks
-def test_mgmt_to_vlan_connection(self, api_client, request, client, unique_name,
+<pre><code class="python">def test_mgmt_to_vlan_connection(self, api_client, request, client, unique_name,
                                  image_opensuse, vm_network, wait_timeout, vm_checker):
     &#34;&#34;&#34;
     Manual test plan reference:
@@ -1546,9 +1529,7 @@ def test_mgmt_to_vlan_connection(self, api_client, request, client, unique_name,
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
-@pytest.mark.networks
-@pytest.mark.dependency(name=&#34;reboot_vlan_connection&#34;,
+<pre><code class="python">@pytest.mark.dependency(name=&#34;reboot_vlan_connection&#34;,
                         depends=[&#34;vlan_network_connection&#34;])
 def test_reboot_vlan_connection(self, api_client, request, unique_name,
                                 image_opensuse, vm_network, wait_timeout, vm_checker):
@@ -1714,9 +1695,7 @@ def test_reboot_vlan_connection(self, api_client, request, unique_name,
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
-@pytest.mark.networks
-@pytest.mark.dependency(name=&#34;vlan_network_connection&#34;)
+<pre><code class="python">@pytest.mark.dependency(name=&#34;vlan_network_connection&#34;)
 def test_vlan_network_connection(self, api_client, request, client, unique_name,
                                  image_opensuse, vm_network, wait_timeout, vm_checker):
     &#34;&#34;&#34;
@@ -1814,9 +1793,7 @@ def test_vlan_network_connection(self, api_client, request, client, unique_name,
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
-@pytest.mark.networks
-def test_vlan_to_mgmt_connection(
+<pre><code class="python">def test_vlan_to_mgmt_connection(
     self, api_client, request, client, unique_name, image_opensuse, vm_network, wait_timeout,
     host_shell, vm_shell_from_host, vm_checker
 ):
