--- a/backend/apis/test_volumes.html
+++ b/backend/apis/test_volumes.html
@@ -55,6 +55,7 @@ el.replaceWith(d);
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
 @pytest.mark.volumes
 class TestVolumes:
     def test_create(self, api_client, unique_name):
@@ -283,6 +284,7 @@ note: this will fail if you run it by itself</li>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.sanity
 @pytest.mark.negative
 @pytest.mark.volumes
 class TestVolumesNegative:
@@ -317,6 +319,7 @@ class TestVolumesNegative:
         assert 422 == code, (code, data)
         assert &#34;Invalid&#34; == data.get(&#34;code&#34;), (code, data)
 
+    @pytest.mark.skip_version_if(&#34;&gt;= v1.4.0&#34;, reason=&#34;issue#7030, breaking changes&#34;)
     def test_create_without_name(self, api_client):
         &#34;&#34;&#34;
         1. Tries to create a volume without a name
@@ -346,7 +349,8 @@ class TestVolumesNegative:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">def test_create_without_name(self, api_client):
+<pre><code class="python">@pytest.mark.skip_version_if(&#34;&gt;= v1.4.0&#34;, reason=&#34;issue#7030, breaking changes&#34;)
+def test_create_without_name(self, api_client):
     &#34;&#34;&#34;
     1. Tries to create a volume without a name
     2. Checks that it gets a  422
