--- a/backend/integrations/test_1_images.html
+++ b/backend/integrations/test_1_images.html
@@ -319,8 +319,9 @@ def vlan_cidr(api_client, cluster_network, vlan_id, wait_timeout, sleep_timeout)
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.images
 class TestBackendImages:
-    @pytest.mark.p0
+    @pytest.mark.smoke
     @pytest.mark.dependency(name=&#34;create_image_from_volume&#34;)
     def test_create_image_from_volume(
         self, api_client, unique_name, export_storage_class, wait_timeout
@@ -382,7 +383,7 @@ class TestBackendImages:
         delete_volume(api_client, volume_name, wait_timeout)
         delete_image(api_client, image_id, wait_timeout)
 
-    @pytest.mark.p0
+    @pytest.mark.smoke
     @pytest.mark.dependency(name=&#34;create_image_url&#34;)
     def test_create_image_url(self, image_info, unique_name, api_client, wait_timeout):
         &#34;&#34;&#34;
@@ -400,8 +401,8 @@ class TestBackendImages:
         create_image_url(api_client, image_name, image_url,
                          image_info.image_checksum, wait_timeout)
 
+    @pytest.mark.sanity
     @pytest.mark.skip_version_if(&#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;, reason=&#34;Issue#4293 fix after `v1.4.0`&#34;)
-    @pytest.mark.p0
     @pytest.mark.dependency(name=&#34;delete_image_recreate&#34;, depends=[&#34;create_image_url&#34;])
     def test_delete_image_recreate(
         self,
@@ -451,7 +452,8 @@ class TestBackendImages:
         get_image(api_client, unique_name)
         delete_image(api_client, unique_name, wait_timeout)
 
-    @pytest.mark.p0
+    @pytest.mark.sanity
+    @pytest.mark.negative
     def test_create_invalid_file(
         self, api_client, gen_unique_name, fake_invalid_image_file, wait_timeout
     ):
@@ -471,7 +473,8 @@ class TestBackendImages:
         ), f&#34;File size correct, it&#39;s a multiple of 512 bytes:{resp.status_code}, {resp.content}&#34;
         delete_image(api_client, unique_name, wait_timeout)
 
-    @pytest.mark.p0
+    @pytest.mark.sanity
+    @pytest.mark.negative
     @pytest.mark.dependency(name=&#34;edit_image_in_use&#34;, depends=[&#34;create_image_url&#34;])
     def test_edit_image_in_use(self, api_client, unique_name, image_info, wait_timeout):
         &#34;&#34;&#34;
@@ -553,7 +556,7 @@ class TestBackendImages:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
+<pre><code class="python">@pytest.mark.smoke
 @pytest.mark.dependency(name=&#34;create_image_from_volume&#34;)
 def test_create_image_from_volume(
     self, api_client, unique_name, export_storage_class, wait_timeout
@@ -633,7 +636,7 @@ def test_create_image_from_volume(
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
+<pre><code class="python">@pytest.mark.smoke
 @pytest.mark.dependency(name=&#34;create_image_url&#34;)
 def test_create_image_url(self, image_info, unique_name, api_client, wait_timeout):
     &#34;&#34;&#34;
@@ -667,7 +670,8 @@ def test_create_image_url(self, image_info, unique_name, api_client, wait_timeou
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.negative
 def test_create_invalid_file(
     self, api_client, gen_unique_name, fake_invalid_image_file, wait_timeout
 ):
@@ -701,8 +705,8 @@ def test_create_invalid_file(
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_if(&#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;, reason=&#34;Issue#4293 fix after `v1.4.0`&#34;)
-@pytest.mark.p0
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.skip_version_if(&#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;, reason=&#34;Issue#4293 fix after `v1.4.0`&#34;)
 @pytest.mark.dependency(name=&#34;delete_image_recreate&#34;, depends=[&#34;create_image_url&#34;])
 def test_delete_image_recreate(
     self,
@@ -770,7 +774,8 @@ def test_delete_image_recreate(
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.p0
+<pre><code class="python">@pytest.mark.sanity
+@pytest.mark.negative
 @pytest.mark.dependency(name=&#34;edit_image_in_use&#34;, depends=[&#34;create_image_url&#34;])
 def test_edit_image_in_use(self, api_client, unique_name, image_info, wait_timeout):
     &#34;&#34;&#34;
@@ -852,6 +857,10 @@ def test_edit_image_in_use(self, api_client, unique_name, image_info, wait_timeo
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">@pytest.mark.p0
+@pytest.mark.smoke
+@pytest.mark.images
+@pytest.mark.settings
+@pytest.mark.networks
 @pytest.mark.skip_version_if(&#34;&lt; v1.0.3&#34;)
 @pytest.mark.usefixtures(&#34;storage_network&#34;)
 class TestImageWithStorageNetwork:
