Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/manual/_incoming/2261-terraform-import-vlan/index.html
+++ b/manual/_incoming/2261-terraform-import-vlan/index.html
@@ -1936,6 +1936,7 @@
        <ul>
 <li>Related issues: <a href="https://github.com/harvester/harvester/issues/2261">#2261</a> [FEATURE] enhance terraform network to not pruge route_cidr and route_gateway</li>
 </ul>
+<p>** Harvester Version &lt;= <code>v1.0.3</code>**</p>
 <h2 id="category">Category:</h2>
 <ul>
 <li>Terraform</li>
